// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogIn page after entering values 1`] = `
<DocumentFragment>
  <div
    class="container-fluid min-height d-flex align-items-center justify-content-center"
  >
    <div
      class="col-md-4 w-100 p-0 "
    >
      <h2
        class="text-dark text-center mb-4"
      >
        Login
      </h2>
      <div
        class="p-md-5 pb-md-3 p-2 login-card card-border card"
      >
        <form
          autocomplete="off"
          class=""
        >
          <div
            class="form-group"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-prepend"
              >
                <span
                  class="bg-white border-right-0 input-group-text"
                >
                  <img
                    alt="mail"
                    class="img-fluid"
                    height="20"
                    src="Mail.svg"
                    width="20"
                  />
                </span>
              </div>
              <input
                class="border-left-0 form-control"
                id="email"
                name="email"
                placeholder="Enter email"
                required=""
                type="email"
                value="tomati@gmail.com"
              />
            </div>
          </div>
          <div
            class="form-group"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-prepend"
              >
                <span
                  class="bg-white border-right-0 input-group-text"
                >
                  <img
                    alt="lock"
                    class="img-fluid"
                    height="20"
                    src="Lock.svg"
                    width="20"
                  />
                </span>
              </div>
              <input
                class="border-left-0 border-right-none form-control"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value="Soul@123"
              />
              <div
                class="input-group-append"
              >
                <div
                  class="show-button"
                >
                  <small>
                    Show
                  </small>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between align-items-center mt-4 form-group"
          >
            <a
              class=" red-link"
              href="/forgot-password"
            >
              Forgot Password?
            </a>
            <button
              class="rounded-pill btn-danger px-4 btn btn-primary"
              type="submit"
            >
              Login
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LogIn page before entering values 1`] = `
<DocumentFragment>
  <div
    class="container-fluid min-height d-flex align-items-center justify-content-center"
  >
    <div
      class="col-md-4 w-100 p-0 "
    >
      <h2
        class="text-dark text-center mb-4"
      >
        Login
      </h2>
      <div
        class="p-md-5 pb-md-3 p-2 login-card card-border card"
      >
        <form
          autocomplete="off"
          class=""
        >
          <div
            class="form-group"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-prepend"
              >
                <span
                  class="bg-white border-right-0 input-group-text"
                >
                  <img
                    alt="mail"
                    class="img-fluid"
                    height="20"
                    src="Mail.svg"
                    width="20"
                  />
                </span>
              </div>
              <input
                class="border-left-0 form-control"
                id="email"
                name="email"
                placeholder="Enter email"
                required=""
                type="email"
                value=""
              />
            </div>
          </div>
          <div
            class="form-group"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-prepend"
              >
                <span
                  class="bg-white border-right-0 input-group-text"
                >
                  <img
                    alt="lock"
                    class="img-fluid"
                    height="20"
                    src="Lock.svg"
                    width="20"
                  />
                </span>
              </div>
              <input
                class="border-left-0 border-right-none form-control"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value=""
              />
              <div
                class="input-group-append"
              >
                <div
                  class="show-button"
                >
                  <small>
                    Show
                  </small>
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between align-items-center mt-4 form-group"
          >
            <a
              class=" red-link"
              href="/forgot-password"
            >
              Forgot Password?
            </a>
            <button
              class="rounded-pill btn-danger px-4 btn btn-primary"
              type="submit"
            >
              Login
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
